Fix TBB linking for debug builds in a DRY way
Add TBB dependency to the shared nix-meson-build-support/common/meson.build
file that is included by all subprojects, conditioned on debug mode. This
solves the undefined TBB symbol linking errors in debug builds where TBB
symbols aren't inlined.

In release builds with optimization, TBB symbols are fully inlined and don't
need to be linked explicitly.

This approach is cleaner and more maintainable than adding TBB to each
individual meson.build file, and removes the duplicate declarations that
were previously scattered across multiple files.

--- a/nix-meson-build-support/common/meson.build
+++ b/nix-meson-build-support/common/meson.build
@@ -5,6 +5,14 @@ if not (host_machine.system() == 'windows' and cxx.get_id() == 'gcc')
   deps_private += dependency('threads')
 endif
 
+# TBB is needed through transitive dependencies (libblake3 is compiled with TBB support).
+# In debug builds, TBB symbols aren't inlined, so we need to link it explicitly.
+# See: https://github.com/NixOS/nix/issues/13908
+if get_option('debug')
+  tbb = dependency('tbb', method : 'pkg-config')
+  deps_private += tbb
+endif
+
 if host_machine.system() == 'cygwin'
   # -std=gnu on cygwin defines 'unix', which conflicts with the namespace
   add_project_arguments(
